src/tests/testfiles/variable-declaration-1.txt
Error at 3:9: identifier a already taken by variable
float a;
      ^
